# Maurice

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIG.md  CONTRACTS.md  DREAMS.md  HARNESS_PLAN.md  MVP_BUILD.md  Makefile  POST_MVP_PLAN.md  PROVIDERS.md  README.md  README_DEVS.md  ROADMAP.md  SECURITY.md  SELF_UPDATE.md  SKILLS.md  SPEC.md  docker-compose.yml  install.sh  install_autostart.sh  pyproject.toml  todos.md  uninstall.sh
docker/searxng/: settings.yml
docs/: architecture.md  automations.md  config.md  missions.md  security.md  skills.md  turn-lifecycle.md
maurice/: __init__.py
maurice/defaults/: USER_ONBOARDING.md  __init__.py
maurice/host/: __init__.py  agent_runtime.py  (+37 more)
memory/: MEMORY.md  project_overview.md
tests/: conftest.py  test_agent_wizard.py  test_channels.py  test_chatgpt_auth.py  test_classifier.py  test_cli.py  test_commands.py  test_compaction.py  test_context.py  test_contracts.py  test_daily_tools.py  test_dashboard.py  test_dev_workers.py  test_dreaming_tools.py  test_events_sessions.py  test_exec_tools.py  test_explore.py  test_filesystem_tools.py  test_gateway.py  test_git_status.py  test_host_tools.py  test_loop.py  test_memory_tools.py  test_migration.py  test_model_schema_migration.py  test_monitoring.py  test_permissions_approvals.py  test_project_registry.py  test_provider_config.py  test_providers_chatgpt.py  test_providers_ollama.py  test_providers_openai.py  test_reminders_tools.py  test_repl.py  test_runs.py  test_runtime_projects.py  test_scheduler.py  test_self_update_apply.py  test_self_update_tools.py  test_server.py  (+10 more)
(+111 files in other folders)
